Comeceu a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <main>
        <header>
-           <h1>Titulo do Site</h1>
+           <h1>Cursos Grátis</h1>
        </header>
        <article>
-           <h2>Artigo 001
-               <p>Texto do Artigo 001</p>
-           </h2>
+           <h2>Curso de HTML 5 com CSS3</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorem, eius numquam labore corrupti soluta voluptatum ab quisquam quasi itaque! Labore repellendus facere repudiandae alias exercitationem, consequuntur accusamus totam doloribus.</p>
+           
        </article>
        <article>
-           <h2>Artigo 002</h2>
-           <p>Texto do Artigo 002</p>
+           <h2>Curso de Javascript</h2>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, eveniet quos. Officia earum voluptate sit minima maxime voluptatem sed amet natus, ullam nostrum id recusandae atque hic aliquid numquam quis!</p>
        </article>
     </main>
 </body>
